# veWild-CosmWasm-Translation

./: .gitignore
contracts/veWILD/: Cargo.toml  source.sol
contracts/veWILD/src/: consts.rs  contract.rs  cw20_client.rs  error.rs  events.rs  internal.rs  lib copy.rs  lib.rs  msg.rs  state.rs  test_helpers.rs  tests.rs
veWILD/: Cargo.toml
veWILD/src/: contract.rs  error.rs  msg.rs  state.rs
