[package]
name = "veWILD"
version = "0.1.0"
edition = "2021"

[dependencies]
cw2 = "0.16.0"
cw20 = "0.16.0"
cw20-base ={version = "0.16.0", features = ["library"]}
cosmwasm-std = { version = "1.0.0-beta8", features = ["staking"] }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = "1"
schemars = "0.8.1"
cw-utils = "0.13"
cosmwasm-schema = "1.1.4"
cw-storage-plus = "0.13.4"

[dev-dependencies]
cw-multi-test = "0.13.4"

[[bin]]
name = "schema"
path = "bin/schema.rs"

[features]
library = []
